...
    return Scaffold(
      appBar: AppBar(
        title: const Text('Todo'),
      ),
      body: _pageOptions[_selectedIndex],
      floatingActionButton: FloatingActionButton(
        key: const ValueKey('button.add'),
        onPressed: () => _onAddItemTapped(),
        child: const Icon(Icons.add),
      ),
      bottomNavigationBar: BottomNavigationBar(
        items: _bottomBarItems(),
        onTap: _onItemTapped,
...
